After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723809 - <Esc> doesn't escape/exit selection mode
<Esc> doesn't escape/exit selection mode
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-02-07 00:44 UTC by alex diavatis
Modified: 2014-03-28 00:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description alex diavatis 2014-02-07 00:44:35 UTC
Reproduce always

1. Go to Recent
2. Right Click to select
3. Press escape

Expected Behavior:

Escape/Exit the selection mode.

Actual Behavior:

Does nothing


GNOME-Music 3.10 can escape selections (with Esc) and GNOME Photos also added this in development 3.11.x version.
Comment 1 Bastien Nocera 2014-03-28 00:40:35 UTC
commit 4900ab15d5c23bb6339f412104521b49795cee07
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Mar 28 01:39:52 2014 +0100

    main: Escape selection mode when pressing Esc
    
    https://bugzilla.gnome.org/show_bug.cgi?id=723809