main: Escape selection mode when pressing Esc

https://bugzilla.gnome.org/show_bug.cgi?id=723809